--- a/demo-parent/pom.xml
+++ b/demo-parent/pom.xml
@@ -40,6 +40,11 @@
                 <artifactId>guava</artifactId>
                 <version>28.1-jre</version>
             </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>1.2.61</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
