--- a/demo-tx/pom.xml
+++ b/demo-tx/pom.xml
@@ -8,7 +8,7 @@
         <artifactId>demo-parent-util</artifactId>
         <version>1.0.0</version>
     </parent>
-    
+
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>demo-tx</artifactId>
@@ -17,6 +17,14 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
     </dependencies>
 
